fix/feat: diff modal layout and dark mode, plain text and highlight toggles, accurate block count

--- a/src-frontend/media/bars.css
+++ b/src-frontend/media/bars.css
@@ -1,48 +1,57 @@
 /* sidebar */
 
 .sidebar {
-    width: fit-content;
-    position: fixed;
+    display: flex;
     height: 100%;
     padding-right: 5px;
-    border-right: 1px solid grey;
-    background-color: #e6f0ff;
-    overflow: auto;
-}
 
-.sidebar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
+    & main {
+        overflow-y: auto;
+        flex-grow: 1;
+    }
 
-.sidebar li {
-    list-style-type: none;
-}
+    & ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
 
-.sidebar li button {
-    padding: 15px 30px;
-    border: 0.5px solid grey;
-    background-color: #d9e3f2;
-    color: hsla(225, 15%, 40%, 0.75);
-    transition: 0.2s background-color ease-in;
-    margin-top: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
+    & li {
+        list-style-type: none;
 
-.sidebar li button:hover {
-    background-color: #ccd3dd;
-}
+        & button {
+            padding: 15px 30px;
+            border: 0.5px solid grey;
+            background-color: #d9e3f2;
+            color: hsla(225, 15%, 40%, 0.75);
+            transition: 0.2s background-color ease-in;
+            margin-top: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
 
-.sidebar li button.active-tab,
-.topbar a.active-tab {
-    color: var(--menu-bar-background-default);
-    background-color: white;
-    outline: none;
-}
+            &:hover {
+                background-color: #ccd3dd;
+            }
 
-/* bottom bar */
+            & .active-tab {
+                color: var(--menu-bar-background-default);
+                background-color: white;
+                outline: none;
+            }
+        }
+    }
+
+    & aside {
+        padding: 1rem;
+        border-right: 1px solid grey;
+        background-color: #e6f0ff;
+        margin-left: -20px;
+    }
+
+    .content {
+        margin-top: 10px;
+    }
+}
 
 .bottom {
     margin-top: auto;
@@ -56,18 +65,18 @@
     background-color: transparent;
     padding: 10px;
     bottom: 0;
-}
 
-.bottom-bar select {
-    font-size: 14px;
-    background-color: var(--menu-bar-background-default);
-    color: white;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 4px;
-    cursor: pointer;
-    font-family: inherit;
-    font-weight: bold;
+    & select {
+        font-size: 14px;
+        background-color: var(--menu-bar-background-default);
+        color: white;
+        border: none;
+        padding: 0.5rem 1rem;
+        border-radius: 4px;
+        cursor: pointer;
+        font-family: inherit;
+        font-weight: bold;
+    }
 }
 
 /* top bar */
@@ -83,23 +92,23 @@
     padding: 10px;
     border-bottom: 1px solid grey;
     width: 100%;
-}
 
-.topbar a {
-    display: inline-block;
-    padding: 0 10px;
-    color: hsla(225, 15%, 40%, 0.75);
-    text-decoration: none;
+    & a {
+        display: inline-block;
+        padding: 0 10px;
+        color: hsla(225, 15%, 40%, 0.75);
+        text-decoration: none;
+    }
 }
 
 .dark .topbar {
     background-color: #111;
-}
 
-.dark .topbar a {
-    color: #707070;
-}
+    & a {
+        color: #707070;
 
-.dark .topbar a.active-tab {
-    color: #eee;
+        & .active-tab {
+            color: #eee;
+        }
+    }
 }
